// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotSheet Corner Tests should render row corner when columns and values is empty for { hierarchyType: 'grid', cornerNodeCount: 2, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 100,
    "x": 100,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns and values is empty for { hierarchyType: 'grid', cornerNodeCount: 3, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 96,
    "x": 80,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 96,
    "x": 176,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns and values is empty for { hierarchyType: 'tree', cornerNodeCount: 1, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city/数值",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 0,
    "value": "province/city/数值",
    "width": 150,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns and values is empty for { hierarchyType: 'tree', cornerNodeCount: 2, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city/数值",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 80,
    "value": "province/city/数值",
    "width": 150,
    "x": 80,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns is empty and measure hidden for { hierarchyType: 'grid', cornerNodeCount: 2, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 150,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 150,
    "x": 150,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns is empty and measure hidden for { hierarchyType: 'grid', cornerNodeCount: 3, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 110,
    "x": 80,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 110,
    "x": 190,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns is empty and measure hidden for { hierarchyType: 'tree', cornerNodeCount: 1, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 0,
    "value": "province/city",
    "width": 122,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns is empty and measure hidden for { hierarchyType: 'tree', cornerNodeCount: 2, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 80,
    "value": "province/city",
    "width": 122,
    "x": 80,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when measure hidden for { hierarchyType: 'grid', cornerNodeCount: 2, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 100,
    "x": 100,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when measure hidden for { hierarchyType: 'grid', cornerNodeCount: 3, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 96,
    "x": 80,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 96,
    "x": 176,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when measure hidden for { hierarchyType: 'tree', cornerNodeCount: 1, showSeriesNumber: false } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 0,
    "value": "province/city",
    "width": 122,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when measure hidden for { hierarchyType: 'tree', cornerNodeCount: 2, showSeriesNumber: true } 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "series",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "series-number-node",
    "label": "序号",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "序号",
    "width": 80,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": undefined,
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "",
    "label": "province/city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": 80,
    "value": "province/city",
    "width": 122,
    "x": 80,
    "y": 0,
  },
]
`;
